--- a/ninjira-timeline/src/app/home/home.component.html
+++ b/ninjira-timeline/src/app/home/home.component.html
@@ -1,21 +1,2 @@
-<div class="left-menu">
-	<ul>
-<!--		
-		<li (click)="goBack()">
-			<fa name="arrow-left" title="Volver"></fa>
-		</li>
--->
-		<li (click)="goPage('/home')">
-			<fa name="home" title="Principal"></fa>
-		</li>
-		<li (click)="goPage('/planning')">
-			<fa name="bar-chart" title="Planificacion"></fa>
-		</li>
-		<li (click)="goPage('/users')">
-			<fa name="users" title="Usuarios"></fa>
-		</li>
-		<li (click)="goPage('/tasks')">
-			<fa name="tasks" title="Tareas"></fa>
-		</li>
-	</ul>
-</div>
+<app-menu></app-menu>
+
